started working on random selection

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -435,6 +435,7 @@ RITUAL_CASTER=Incantatore Rituale
 SENTINEL=Sentinella
 SHADOW_TOUCHED=Toccato dalle Ombre
 SHARPSHOOTER=Tiratore Scelto
+TELEKINETIC=Telecinetico
 SHIELD_MASTER=Maestro degli Scudi
 SKILL_EXPERT=Esperto di Abilità
 SKULKER=Furtivo
@@ -444,6 +445,18 @@ SPELL_SNIPER=Cecchino Magico
 TELEPATHIC=Telepatico
 WAR_CASTER=Incantatore Magico
 WEAPON_MASTER=Maestro d’Armi
+BOON_OF_COMBAT_PROWESS=Dono della Prestanza in Combattimento
+BOON_OF_DIMENSIONAL_TRAVEL=Dono del Viaggio Dimensionale
+BOON_OF_ENERGY_RESISTANCE=Dono della Reistenza Energetica
+BOON_OF_FATE=Dono del Destino
+BOON_OF_FORTITUDE=Dono della Fortitudine
+BOON_OF_IRRESISTIBLE_OFFENSE=Dono dell’Offensiva Inarrestabile
+BOON_OF_RECOVERY=Dono del Recupero
+BOON_OF_SKILL=Dono dell'Abilità
+BOON_OF_SPEED=Dono della Velocità
+BOON_OF_SPELL_RECALL=Dono del Richiamo degli Incantesimi
+BOON_OF_THE_NIGHT_SPIRIT=Dono dello Spirito della Notte
+BOON_OF_TRUESIGHT=Dono della Veravisione
 
 # ------------------------------
 # Alignments
@@ -902,6 +915,24 @@ WOOD_ELF_1=Elfo dei Boschi (Livello 1)
 WOOD_ELF_3=Elfo dei Boschi (Livello 3)
 WOOD_ELF_5=Elfo dei Boschi (Livello 5)
 
+PEERLESS_AIM=Mira Senza Pari
+BLINK_STEPS=Passi Fulminei
+ENERGY_REDIRECTION=Reindirizzamento Energetico
+ENERGY_RESISTANCES=Resistenze Energetiche
+IMPROVE_FATE=Migliora il Destino
+FORTIFIED_HEALTH=Salute Rinforzata
+OVERWHELMING_STRIKE=Colpo Travolgente
+OVERCOME_DEFENSES=Supera le Difese
+LAST_STAND=Ultima Difesa
+RECOVER_VITALITY=Recupera Vitalità
+ALL_AROUND_ADEPT=Adepto a Tutto Tondo
+ESCAPE_ARTIST=Artista della Fuga
+QUICKNESS=Rapidità
+FREE_CASTING=Magie Gratuite
+MERGE_WITH_SHADOWS=Fusione con le Ombre
+SHADOWY_FORM=Forma Ombrosa
+TRUESIGHT=Veravisione
+
 # ------------------------------
 # Magic
 # ------------------------------
@@ -1277,7 +1308,7 @@ SPIKE_GROWTH=Crescita delle Spine
 SPIRIT_GUARDIANS=Guardiani Spirituali
 SPIRITUAL_WEAPON=Arma Spirituale
 STAGGERING_SMITE=Colpo Stordente
-STARRY_WISP=Lucciola Stellare
+STARRY_WISP=Fuoco Fatuo Stellare
 STEEL_WIND_STRIKE=Colpo del Vento d'Acciaio
 STINKING_CLOUD=Nuvola Puzzolente
 STONE_SHAPE=Forma di Pietra
