added option to random generate missing attributes and create a character

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -700,7 +700,7 @@ PLATINUM=MP
 # Abilities
 # ------------------------------
 ABILITIES=Caratteristiche
-GENERATION_METHOD=Metodo di Generazione
+GENERATION_METHOD=Generazione Abilità
 STANDARD_ARRAY=Array Standard
 POINT_BUY=Acquisto Punti
 
@@ -1349,7 +1349,7 @@ TREE_STRIDE=Passo degli Alberi
 TRUE_POLYMORPH=Polimorfismo Vero
 TRUE_RESURRECTION=Resurrezione Vera
 TRUE_SEEING=Visione Vera
-TRUE_STRIKE=Colpo Vero
+TRUE_STRIKE=Colpo Accurato
 TSUNAMI=Tsunami
 UNSEEN_SERVANT=Servitore Invisibile
 VAMPIRIC_TOUCH=Tocco Vampirico
