implemented save/load logic

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -31,6 +31,7 @@ ABILITIES_AND_SKILLS=Caratteristiche e Abilità
 PARAMETERS=Parametri
 LOOKS=Aspetto
 PROFICIENCIES=Competenze
+PROFICIENCIES_AND_FEATURES=Competenze e Tratti
 WEAPONS_ARMORS_TOOLS=Armi, Armature e Strumenti
 RESISTANCES_IMMUNITIES=Resistenze e immunità
 INFO=Info
@@ -63,8 +64,11 @@ FINISH=Termina
 CONFIRM=Conferma
 SHEET_NUMBER=Numero schede
 SAVE=Salva
+SAVE_CHARACTER=Salva Personaggio
 SAVE_AS=Salva come...
 LOAD=Carica
+LOAD_CHARACTER=Carica Personaggio
+CHARACTER_FILES=File Personaggio
 WARNING_UNSAVED=Personaggio non salvato
 YES=Sì
 NO=No
