track changes and prevent closing while unsaved

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -62,16 +62,20 @@ SYSTEM=Sistema
 EDIT=Modifica
 FINISH=Termina
 CONFIRM=Conferma
-SHEET_NUMBER=Numero schede
+SHEET_NUMBER=Nu1mero schede
 SAVE=Salva
+SAVE_ALL=Salva Tutto
+DONT_SAVE=Non salvare
 SAVE_CHARACTER=Salva Personaggio
 SAVE_AS=Salva come...
 LOAD=Carica
 LOAD_CHARACTER=Carica Personaggio
 CHARACTER_FILES=File Personaggio
 WARNING_UNSAVED=Personaggio non salvato
-YES=Sì
-NO=No
+WARNING_MULTIPLE_UNSAVED=Ci sono modifiche non salvate
+UNSAVED_CHANGES=Modifiche non salvate
+SAVE_BEFORE_CLOSING=Vuoi salvare le modifiche prima di chiudere?
+SAVE_ALL_BEFORE_CLOSING=Vuoi salvare tutte le modifiche prima di chiudere?
 CANCEL=Annulla
 CLOSE_MESSAGE=Salvare le modifiche?
 
