--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -945,7 +945,6 @@ TRUESIGHT=Veravisione
 # Magic
 # ------------------------------
 MAGIC=Magia
-SPELLCASTING_ABILITY=Caratteristica per Incantesimi
 
 CANTRIP=Trucchetto
 CANTRIPS=Trucchetti
@@ -1146,7 +1145,7 @@ FORCECAGE=Gabbia di Forza
 FORESIGHT=Preveggenza
 FOUNT_OF_MOONLIGHT=Fonte di Luce Lunare
 FREEDOM_OF_MOVEMENT=Libertà di Movimento
-FRIENDS=Amici
+FRIENDS=Amicizia
 GASEOUS_FORM=Forma Gassosa
 GATE=Portale
 GEAS=Geis
