building equipment section

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -59,10 +59,11 @@ FEMALE=Femmina
 # System
 # ------------------------------
 SYSTEM=Sistema
+COMBAT=Combattimento
 EDIT=Modifica
 FINISH=Termina
 CONFIRM=Conferma
-SHEET_NUMBER=Nu1mero schede
+SHEET_NUMBER=Numero schede
 SAVE=Salva
 SAVE_ALL=Salva Tutto
 DONT_SAVE=Non salvare
@@ -78,6 +79,7 @@ SAVE_BEFORE_CLOSING=Vuoi salvare le modifiche prima di chiudere?
 SAVE_ALL_BEFORE_CLOSING=Vuoi salvare tutte le modifiche prima di chiudere?
 CANCEL=Annulla
 CLOSE_MESSAGE=Salvare le modifiche?
+ADD_ITEM=Aggiungi Oggetto
 
 # ------------------------------
 # Attributes
@@ -594,11 +596,11 @@ LEATHER_ARMOR=Armatura di Cuoio
 STUDDED_LEATHER_ARMOR=Armatura di Cuoio Borchiato
 HIDE_ARMOR=Armatura di Pelle
 CHAIN_SHIRT=Maglia
-SCALE_MAIL=Maglia di Scaglie
+SCALE_MAIL=Maglia a Scaglie
 BREASTPLATE=Corazza
 HALF_PLATE=Mezza Armatura
-RING_MAIL=Maglia a Scaglie
-CHAIN_MAIL=Maglia di Maglia
+RING_MAIL=Maglia ad Anelli
+CHAIN_MAIL=Cotta di Maglia
 SPLINT_ARMOR=Armatura di Piastre
 PLATE_ARMOR=Armatura Completa
 SHIELD=Scudo
@@ -612,6 +614,11 @@ SHIELDS=Scudi
 # Tools
 # ------------------------------
 EXPLORERS_PACK=Equipaggiamento da Esploratore
+DUNGEONEERS_PACK=Equipaggiamento da Esploratore di Dungeon
+PRIESTS_PACK=Equipaggiamento da Prete
+SCHOLARS_PACK=Equipaggiamento da Studioso
+ENTERTAINERS_PACK=Equipaggiamento da Intrattenitore
+BURGLARS_PACK=Equipaggiamento da Ladro
 
 CALLIGRAPHERS_SUPPLIES=Scorte da Calligrafo
 BREWERS_SUPPLIES=Scorte da Mescitore
@@ -635,16 +642,17 @@ WOODCARVERS_TOOLS=Attrezzi da Intagliatore
 # ------------------------------
 # Items
 # ------------------------------
-BOOK_PRAYERS=Libro di Preghiere
 HOLY_SYMBOL=Icona Sacra
 PARCHMENT_SHEETS=Fogli di Pergamena
 ROBE=Tunica
 POUCH=Borsa
 TRAVELERS_CLOTHES=Abiti da viaggiatore
 ROPE=Fune
+BOOK_PRAYERS=Libro di Preghiere
 BOOK_HISTORY=Libro di Storia
+BOOK_PHILOSOPHY=Libro di Filosofia
+BOOK_OCCULT_LORE=Libro di Conoscenze Occulte
 HERBALISM_KIT=Equipaggiamento da Erborista
-BOOK_PHILOSPHY=Libro di Filosofia
 LAMP=Lampada
 OIL_FLASK=Fiaschetta d’Olio
 ARROW=Freccia
@@ -678,6 +686,10 @@ TINDER_BOX=Scatola di Fiammiferi
 BASKET=Cesto
 FIREFLY=Libellula
 PHOSPHORESCENT_MOSS=Muschio Fosforescente
+SPRIG_OF_MISTLETOE=Rametto di Vischio
+CRYSTAL=Cristallo
+ORB=Sfera di Cristallo
+SPELLBOOK=Libro di Incantesimi
 
 DICE=Dadi
 DRAGONCHESS=Scacchi Draconici
