implemented combat features for weapons

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -144,6 +144,12 @@ THIEVES_CANT=Gergo dei Ladri
 # ------------------------------
 ATTACK_MODIFIER=Modificatore di Attacco
 
+ATTACK_ROLL=Tiro per Colpire
+BONUS_ATTACK=Attacco Bonus
+TWO_HANDED_ATTACK=Attacco a Due Mani
+DAMAGE=Danno
+CRITICAL_HIT=Colpo Critico
+
 DAMAGE=Danno
 DAMAGES=Danni
 HIT=Colpo
@@ -500,6 +506,7 @@ MARTIAL_WEAPONS=Armi Da Guerra
 LIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere
 FINESSELIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere o Accurate
 FINESSE_ABILITY=Caratteristica per armi Accurate:
+BEST_ONE=Migliore tra le due
 
 MELEE=Da Mischia
 RANGED=Da Distanza
