added weapon tooltips and improved magic ones

--- a/src/main/resources/spellMaterials_it.properties
+++ b/src/main/resources/spellMaterials_it.properties
@@ -106,7 +106,7 @@ LEGEND_LORE=incense worth 250+ GP, which the spell consumes, and four ivory stri
 LEOMUND'S_SECRET_CHEST=a chest, 3 feet by 2 feet by 2 feet, constructed from rare materials worth 5,000+ GP, and a Tiny replica of the chest made from the same materials worth 50+ GP
 LEOMUND'S_TINY_HUT=a crystal bead
 LEVITATE=a metal spring
-LIGHT=a firefly or phosphorescent moss
+LIGHT_SPELL=a firefly or phosphorescent moss
 LIGHTNING_BOLT=a bit of fur and a crystal rod
 LOCATE_ANIMALS_OR_PLANTS=fur from a bloodhound
 LOCATE_CREATURE=fur from a bloodhound
