--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -1000,6 +1000,8 @@ ACTION=Azione
 BONUS_ACTION=Azione Bonus
 
 PREPARE_SPELLS=Prepara Incantesimi
+PREPARE=Prepara
+EVERY=ogni
 
 COMPONENTS=Componenti
 V=V
