inserted missing class features

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -104,9 +104,7 @@ SMALL=Piccola
 SPEED=Velocità
 FLIGHT_SPEED=Velocità di Volo
 
-RESISTENT=Resistente a:
-IMMUNE=Immune a:
-
+RESISTENT=Resistente a=IMMUNE=Immune a=
 # ------------------------------
 # Languages
 # ------------------------------
@@ -175,12 +173,7 @@ RESULTS=Risultati
 
 ADVANTAGE=Vantaggio
 DISADVANTAGE=Svantaggio
-ADVANTAGE_AGAINST=Vantaggio contro:
-SKILL_ADVANTAGE=Vantaggio ai tiri su:
-SKILL_DISADVANTAGE=Svantaggio ai tiri su:
-SAVE_ADVANTAGE=Vantaggio ai tiri salvezza su:
-SAVE_DISADVANTAGE=Svantaggio ai tiri salvezza su:
-FORCED_ADVANTAGE=Vantaggio Forzato
+ADVANTAGE_AGAINST=Vantaggio contro=SKILL_ADVANTAGE=Vantaggio ai tiri su=SKILL_DISADVANTAGE=Svantaggio ai tiri su=SAVE_ADVANTAGE=Vantaggio ai tiri salvezza su=SAVE_DISADVANTAGE=Svantaggio ai tiri salvezza su=FORCED_ADVANTAGE=Vantaggio Forzato
 
 FAILURE=Fallimento
 
@@ -505,8 +498,7 @@ SIMPLE_WEAPONS=Armi Semplici
 MARTIAL_WEAPONS=Armi Da Guerra
 LIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere
 FINESSELIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere o Accurate
-FINESSE_ABILITY=Caratteristica per armi Accurate:
-BEST_ONE=Migliore tra le due
+FINESSE_ABILITY=Caratteristica per armi Accurate=BEST_ONE=Migliore tra le due
 
 MELEE=Da Mischia
 RANGED=Da Distanza
@@ -765,8 +757,7 @@ SURVIVAL=Sopravvivenza
 # ------------------------------
 # Features
 # ------------------------------
-ACTIVE_ABILITIES=Abilità attive
-PASSIVE_ABILITIES=Abilità passive
+TRAITS=Tratti
 
 ABYSSAL_TIEFLING_1=Tiefling Abissale (Livello 1)
 ABYSSAL_TIEFLING_3=Tiefling Abissale (Livello 3)
@@ -912,7 +903,6 @@ QUICK_DRAW=Estrazione Rapida
 QUICK_RITUAL=Rituale Rapido
 QUICK_SEARCH=Ricerca Rapida
 QUICK_STUDY=Studio Rapido
-RAGE=Ira
 REACTIVE_SPELL=Incantesimo Reattivo
 REACTIVE_STRIKE=Colpo Reattivo
 RELENTLESS_ENDURANCE=Resistenza Inflessibile
@@ -959,6 +949,229 @@ FREE_CASTING=Magie Gratuite
 MERGE_WITH_SHADOWS=Fusione con le Ombre
 SHADOWY_FORM=Forma Ombrosa
 TRUESIGHT=Veravisione
+
+BARBARIAN_RAGE=Ira
+BARBARIAN_UNARMORED_DEFENSE=Difesa senza Armatura
+BARBARIAN_WEAPON_MASTERY=Maestria con le Armi (Barbaro)
+BARBARIAN_DANGER_SENSE=Senso del Pericolo
+BARBARIAN_RECKLESS_ATTACK=Attacco Irruentp
+BARBARIAN_PRIMAL_KNOWLEDGE=Conoscenza Primordiale
+BARBARIAN_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+BARBARIAN_EXTRA_ATTACK=Attacco Extra
+BARBARIAN_FAST_MOVEMENT=Movimento Veloce
+BARBARIAN_FERAL_INSTINCT=Istinto Ferino
+BARBARIAN_INSTINCTIVE_POUNCE=Balzo Istintivo
+BARBARIAN_BRUTAL_STRIKE=Colpo Brutale
+BARBARIAN_RELENTLESS_RAGE=Ira Inarrestabile
+BARBARIAN_IMPROVED_BRUTAL_STRIKE=Colpo Brutale Migliorato
+BARBARIAN_PERSISTENT_RAGE=Ira Persistente
+BARBARIAN_IMPROVED_BRUTAL_STRIKE_2=Colpo Brutale Migliorato
+BARBARIAN_INDOMITABLE_MIGHT=Forza Indomabile
+BARBARIAN_EPIC_BOON=Dono Epico
+BARBARIAN_PRIMAL_CHAMPION=Campione Primordiale
+BARBARIAN_SUB_FRENZY=Frenesia
+BARBARIAN_SUB_MINDLESS_RAGE=Ira Incontrollata
+BARBARIAN_SUB_RETALIATION=Ritorsione
+BARBARIAN_SUB_INTIMIDATING_PRESENCE=Presenza Intimidatoria
+BARD_BARDIC_INSPIRATION=Ispirazione Bardica
+BARD_SPELLCASTING=Incantesimi (Bardo)
+BARD_EXPERTISE=Esperienza
+BARD_JACK_OF_ALL_TRADES=Abile in Tutto
+BARD_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+BARD_FONT_OF_INSPIRATION=Fonte di Ispirazione
+BARD_COUNTERCHARM=Controincanto
+BARD_MAGICAL_SECRETS=Segreti Magici
+BARD_SUPERIOR_INSPIRATION=Ispirazione Superiore
+BARD_EPIC_BOON=Dono Epico
+BARD_WORDS_OF_CREATION=Parole di Creazione
+BARD_SUB_BONUS_PROFICIENCIES=Competenze Bonus
+BARD_SUB_CUTTING_WORDS=Parole Taglienti
+BARD_SUB_MAGICAL_DISCOVERIES=Scoperte Magiche
+BARD_SUB_PEERLESS_SKILL=Abilità Senza Pari
+CLERIC_SPELLCASTING=Incantesimi (Chierico)
+CLERIC_DIVINE_ORDER=Ordine Divino
+CLERIC_CHANNEL_DIVINITY=Canalizzare Divinità
+CLERIC_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+CLERIC_SEAR_UNDEAD=Bruciare Non Morti
+CLERIC_BLESSED_STRIKES=Colpi Benedetti
+CLERIC_DIVINE_INTERVENTION=Intervento Divino
+CLERIC_IMPROVED_BLESSED_STRIKES=Colpi Benedetti Migliorati
+CLERIC_EPIC_BOON=Dono Epico
+CLERIC_GREATER_DIVINE_INTERVENTION=Intervento Divino Maggiore
+CLERIC_SUB_DISCIPLE_OF_LIFE=Discipolo della Vita
+CLERIC_SUB_LIFE_DOMAIN_SPELLS=Incantesimi del Dominio della Vita
+CLERIC_SUB_PRESERVE_LIFE=Preservare la Vita
+CLERIC_SUB_BLESSED_HEALER=Curatore Benedetto
+CLERIC_SUB_SUPREME_HEALING=Guarigione Suprema
+DRUID_SPELLCASTING=Incantesimi (Druido)
+DRUID_DRUIDIC=Lingua Druidic
+DRUID_PRIMAL_ORDER=Ordine Primordiale
+DRUID_WILD_SHAPE=Forma Selvatica
+DRUID_WILD_COMPANION=Compagno Selvatico
+DRUID_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+DRUID_WILD_RESURGENCE=Rinascita Selvatica
+DRUID_ELEMENTAL_FURY=Furia Elementale
+DRUID_IMPROVED_ELEMENTAL_FURY=Furia Elementale Migliorata
+DRUID_BEAST_SPELLS=Incantesimi Bestiali
+DRUID_EPIC_BOON=Dono Epico
+DRUID_ARCHDRUID=Arcidruido
+DRUID_SUB_CIRCLE_OF_THE_LAND_SPELLS=Incantesimi del Circolo della Terra
+DRUID_SUB_LAND_S_AID=Aiuto della Terra
+DRUID_SUB_NATURAL_RECOVERY=Recupero Naturale
+DRUID_SUB_NATURE_S_WARD=Guardia della Natura
+DRUID_SUB_NATURE_S_SANCTUARY=Santuario della Natura
+FIGHTER_FIGHTING_STYLE=Stile di Combattimento
+FIGHTER_SECOND_WIND=Secondo Vento
+FIGHTER_WEAPON_MASTERY=Maestria con le Armi (Guerriero)
+FIGHTER_ACTION_SURGE=Azione Impetuosa
+FIGHTER_TACTICAL_MIND=Mente Tattica
+FIGHTER_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+FIGHTER_EXTRA_ATTACK=Attacco Extra
+FIGHTER_TACTICAL_SHIFT=Scambio Tattico
+FIGHTER_INDOMITABLE=Indomabile
+FIGHTER_TACTICAL_MASTER=Maestro Tattico
+FIGHTER_TWO_EXTRA_ATTACKS=Due Attacchi Extra
+FIGHTER_STUDIED_ATTACKS=Attacchi Studiati
+FIGHTER_EPIC_BOON=Dono Epico
+FIGHTER_THREE_EXTRA_ATTACKS=Tre Attacchi Extra
+FIGHTER_SUB_IMPROVED_CRITICAL=Critico Migliorato
+FIGHTER_SUB_REMARKABLE_ATHLETE=Atleta Notevole
+FIGHTER_SUB_ADDITIONAL_FIGHTING_STYLE=Stile di Combattimento Aggiuntivo
+FIGHTER_SUB_HEROIC_WARRIOR=Guerriero Eroico
+FIGHTER_SUB_SUPERIOR_CRITICAL=Critico Superiore
+FIGHTER_SUB_SURVIVOR=Sopravvissuto
+MONK_MARTIAL_ARTS=Arti Marziali
+MONK_UNARMORED_DEFENSE=Difesa Senza Armatura
+MONK_MONK_S_FOCUS=Concentrazione del Monaco
+MONK_UNARMORED_MOVEMENT=Movimento Senza Armatura
+MONK_UNCANNY_METABOLISM=Metabolismo Inquietante
+MONK_DEFLECT_ATTACKS=Deflezione degli Attacchi
+MONK_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+MONK_SLOW_FALL=Caduta Lenta
+MONK_EXTRA_ATTACK=Attacco Extra
+MONK_STUNNING_STRIKE=Colpo Stordente
+MONK_EMPOWERED_STRIKES=Colpi Potenziati
+MONK_EVASION=Elusione
+MONK_ACROBATIC_MOVEMENT=Movimento Acrobatico
+MONK_HEIGHTENED_FOCUS=Concentrazione Accresciuta
+MONK_SELF_RESTORATION=Autoguarigione
+MONK_DEFLECT_ENERGY=Deflessione dell'Energia
+MONK_DISCIPLINED_SURVIVOR=Sopravvissuto Disciplinato
+MONK_PERFECT_FOCUS=Concentrazione Perfetta
+MONK_SUPERIOR_DEFENSE=Difesa Superiore
+MONK_EPIC_BOON=Dono Epico
+MONK_BODY_AND_MIND=Corpo e Mente
+MONK_SUB_OPEN_HAND_TECHNIQUE=Tecnica della Mano Aperta
+MONK_SUB_WHOLENESS_OF_BODY=Integrità del Corpo
+MONK_SUB_FLEET_STEP=Passo Veloce
+MONK_SUB_QUIVERING_PALM=Palmo Tremolante
+PALADIN_LAY_ON_HANDS=Imposizione delle Mani
+PALADIN_SPELLCASTING=Incantesimi (Paladino)
+PALADIN_WEAPON_MASTERY=Maestria con le Armi (Paladino)
+PALADIN_FIGHTING_STYLE=Stile di Combattimento
+PALADIN_PALADIN_S_SMITE=Colpo del Paladino
+PALADIN_CHANNEL_DIVINITY=Incanalare Divinità
+PALADIN_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+PALADIN_EXTRA_ATTACK=Attacco Extra
+PALADIN_FAITHFUL_STEED=Destriero Fedele
+PALADIN_AURA_OF_PROTECTION=Aura di Protezione
+PALADIN_ABJURE_FOES=Esorcizzare i Nemici
+PALADIN_AURA_OF_COURAGE=Aura di Coraggio
+PALADIN_RADIANT_STRIKES=Colpi Radianti
+PALADIN_RESTORING_TOUCH=Tocco Restauratore
+PALADIN_AURA_EXPANSION=Espansione dell'Aura
+PALADIN_EPIC_BOON=Dono Epico
+PALADIN_SUB_OATH_OF_DEVOTION_SPELLS=Incantesimi del Giuramento della Devozione
+PALADIN_SUB_SACRED_WEAPON=Arma Sacra
+PALADIN_SUB_AURA_OF_DEVOTION=Aura di Devozione
+PALADIN_SUB_SMITE_OF_PROTECTION=Colpo di Protezione
+PALADIN_SUB_HOLY_NIMBUS=Nuvola Sacra
+RANGER_SPELLCASTING=Incantesimi (Ranger)
+RANGER_FAVORED_ENEMY=Nemico Preferito
+RANGER_WEAPON_MASTERY=Maestria con le Armi (Ranger)
+RANGER_DEFT_EXPLORER=Esploratore Abile
+RANGER_FIGHTING_STYLE=Stile di Combattimento
+RANGER_RANGER_SUBCLASS=Sottoclasse del Ranger
+RANGER_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+RANGER_EXTRA_ATTACK=Attacco Extra
+RANGER_ROVING=Esplorazione Veloce
+RANGER_EXPERTISE=Esperienza
+RANGER_TIRELESS=Instancabile
+RANGER_RELENTLESS_HUNTER=Cacciatore Implacabile
+RANGER_NATURE_S_VEIL=Velo della Natura
+RANGER_PRECISE_HUNTER=Cacciatore Preciso
+RANGER_FERAL_SENSES=Sensi Ferini
+RANGER_EPIC_BOON=Dono Epico
+RANGER_FOE_SLAYER=Assassino di Nemici
+RANGER_SUB_HUNTER_S_LORE=Conoscenza del Cacciatore
+RANGER_SUB_HUNTER_S_PREY=Preda del Cacciatore
+RANGER_SUB_DEFENSIVE_TACTICS=Tattiche Difensive
+RANGER_SUB_SUPERIOR_HUNTER_S_PREY=Preda Superiore del Cacciatore
+RANGER_SUB_SUPERIOR_HUNTER_S_DEFENSE=Difesa Superiore del Cacciatore
+ROGUE_EXPERTISE=Esperienza
+ROGUE_SNEAK_ATTACK=Attacco Furtivo
+ROGUE_THIEVES_CANT=Dialetto dei Ladri
+ROGUE_WEAPON_MASTERY=Maestria con le Armi (Ladro)
+ROGUE_CUNNING_ACTION=Azione Astuta
+ROGUE_STEADY_AIM=Mira Stabile
+ROGUE_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+ROGUE_CUNNING_STRIKE=Colpo Astuto
+ROGUE_UNCANNY_DODGE=Schivata Innaturale
+ROGUE_EVASION=Elusione
+ROGUE_RELIABLE_TALENT=Talento Affidabile
+ROGUE_IMPROVED_CUNNING_STRIKE=Colpo Astuto Migliorato
+ROGUE_DEVIOUS_STRIKES=Colpi Subdoli
+ROGUE_SLIPPERY_MIND=Mente Scivolosa
+ROGUE_ELUSIVE=Elusivo
+ROGUE_EPIC_BOON=Dono Epico
+ROGUE_STROKE_OF_LUCK=Colpo di Fortuna
+ROGUE_SUB_FAST_HANDS=Mani Veloci
+ROGUE_SUB_SECOND_STORY_WORK=Lavoro al Primo Piano
+ROGUE_SUB_SUPREME_SNEAK=Furtività Suprema
+ROGUE_SUB_USE_MAGIC_DEVICE=Uso del Dispositivo Magico
+ROGUE_SUB_THIEF_S_REFLEXES=Riflessi del Ladro
+SORCERER_SPELLCASTING=Incantesimi (Stregone)
+SORCERER_INNATE_SORCERY=Stregoneria Innata
+SORCERER_FONT_OF_MAGIC=Fonte di Magia
+SORCERER_METAMAGIC=Metamagia
+SORCERER_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+SORCERER_SORCEROUS_RESTORATION=Ripresa Stregonesca
+SORCERER_SORCERY_INCARNATE=Incarnazione della Stregoneria
+SORCERER_EPIC_BOON=Dono Epico
+SORCERER_ARCANE_APOTHEOSIS=Apotosi Arcana
+SORCERER_SUB_DRACONIC_RESILIENCE=Resilienza Draconica
+SORCERER_SUB_DRACONIC_SPELLS=Incantesimi Draconici
+SORCERER_SUB_ELEMENTAL_AFFINITY=Affinita Elementale
+SORCERER_SUB_DRAGON_WINGS=Ali Draconiche
+SORCERER_SUB_DRAGON_COMPANION=Compagno Draconico
+WARLOCK_ELDRITCH_INVOCATIONS=Invocazioni Infernali
+WARLOCK_PACT_MAGIC=Magia del Patto
+WARLOCK_MAGICAL_CUNNING=Astuzia Magica
+WARLOCK_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+WARLOCK_CONTACT_PATRON=Contatto con il Patrono
+WARLOCK_MYSTIC_ARCANUM=Arcano Mistico
+WARLOCK_EPIC_BOON=Dono Epico
+WARLOCK_ELDRITCH_MASTER=Maestro Infernale
+WARLOCK_SUB_DARK_ONE_S_BLESSING=Benedizione del Signore Oscuro
+WARLOCK_SUB_FIEND_SPELLS=Incantesimi del Demone
+WARLOCK_SUB_DARK_ONE_S_OWN_LUCK=Fortuna del Signore Oscuro
+WARLOCK_SUB_FIENDISH_RESILIENCE=Resilienza Demoniaca
+WARLOCK_SUB_HURL_THROUGH_HELL=Scagliare attraverso l'Inferno
+WIZARD_SPELLCASTING=Incantesimi (Mago)
+WIZARD_RITUAL_ADEPT=Adepto Rituale
+WIZARD_ARCANE_RECOVERY=Recupero Arcano
+WIZARD_SCHOLAR=Studioso
+WIZARD_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
+WIZARD_MEMORIZE_SPELL=Memorizzare Incantesimi
+WIZARD_SPELL_MASTERY=Maestria negli Incantesimi
+WIZARD_EPIC_BOON=Dono Epico
+WIZARD_SIGNATURE_SPELLS=Incantesimi Firma
+WIZARD_SUB_EVOCATION_SAVANT=Esperto di Evocazione
+WIZARD_SUB_POTENT_CANTRIP=Trucchetto Potente
+WIZARD_SUB_SCULPT_SPELLS=Scolpire Incantesimi
+WIZARD_SUB_EMPOWERED_EVOCATION=Evocazione Potenziata
+WIZARD_SUB_OVERCHANNEL=Sovraccarico
+
 
 # ------------------------------
 # Magic
@@ -1276,10 +1489,10 @@ PLANE_SHIFT=Spostamento Planare
 PLANT_GROWTH=Crescita delle Piante
 POISON_SPRAY=Spruzzo Velenoso
 POLYMORPH=Polimorfismo
-POWER_WORD_FORTIFY=Parola del Potere: Fortificare
-POWER_WORD_HEAL=Parola del Potere: Guarire
-POWER_WORD_KILL=Parola del Potere: Uccidere
-POWER_WORD_STUN=Parola del Potere: Stordire
+POWER_WORD_FORTIFY=Parola del Potere=
+POWER_WORD_HEAL=Parola del Potere=
+POWER_WORD_KILL=Parola del Potere=
+POWER_WORD_STUN=Parola del Potere=
 PRAYER_OF_HEALING=Preghiera di Guarigione
 PRESTIDIGITATION=Prestidigitazione
 PRISMATIC_SPRAY=Spruzzo Prismatico
