fixed small translation bug

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -104,7 +104,9 @@ SMALL=Piccola
 SPEED=Velocità
 FLIGHT_SPEED=Velocità di Volo
 
-RESISTENT=Resistente a=IMMUNE=Immune a=
+RESISTENT=Resistente a:
+IMMUNE=Immune a:
+
 # ------------------------------
 # Languages
 # ------------------------------
@@ -173,7 +175,12 @@ RESULTS=Risultati
 
 ADVANTAGE=Vantaggio
 DISADVANTAGE=Svantaggio
-ADVANTAGE_AGAINST=Vantaggio contro=SKILL_ADVANTAGE=Vantaggio ai tiri su=SKILL_DISADVANTAGE=Svantaggio ai tiri su=SAVE_ADVANTAGE=Vantaggio ai tiri salvezza su=SAVE_DISADVANTAGE=Svantaggio ai tiri salvezza su=FORCED_ADVANTAGE=Vantaggio Forzato
+ADVANTAGE_AGAINST=Vantaggio contro:
+SKILL_ADVANTAGE=Vantaggio ai tiri su:
+SKILL_DISADVANTAGE=Svantaggio ai tiri su:
+SAVE_ADVANTAGE=Vantaggio ai tiri salvezza su:
+SAVE_DISADVANTAGE=Svantaggio ai tiri salvezza su:
+FORCED_ADVANTAGE=Vantaggio Forzato
 
 FAILURE=Fallimento
 
@@ -498,7 +505,8 @@ SIMPLE_WEAPONS=Armi Semplici
 MARTIAL_WEAPONS=Armi Da Guerra
 LIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere
 FINESSELIGHT_MARTIAL_WEAPONS=Armi Da Guerra Leggere o Accurate
-FINESSE_ABILITY=Caratteristica per armi Accurate=BEST_ONE=Migliore tra le due
+FINESSE_ABILITY=Caratteristica per armi Accurate:
+BEST_ONE=Migliore tra le due
 
 MELEE=Da Mischia
 RANGED=Da Distanza
@@ -1172,7 +1180,6 @@ WIZARD_SUB_SCULPT_SPELLS=Scolpire Incantesimi
 WIZARD_SUB_EMPOWERED_EVOCATION=Evocazione Potenziata
 WIZARD_SUB_OVERCHANNEL=Sovraccarico
 
-
 # ------------------------------
 # Magic
 # ------------------------------
@@ -1489,10 +1496,10 @@ PLANE_SHIFT=Spostamento Planare
 PLANT_GROWTH=Crescita delle Piante
 POISON_SPRAY=Spruzzo Velenoso
 POLYMORPH=Polimorfismo
-POWER_WORD_FORTIFY=Parola del Potere=
-POWER_WORD_HEAL=Parola del Potere=
-POWER_WORD_KILL=Parola del Potere=
-POWER_WORD_STUN=Parola del Potere=
+POWER_WORD_FORTIFY=Parola del Potere: Fortificare
+POWER_WORD_HEAL=Parola del Potere: Guarire
+POWER_WORD_KILL=Parola del Potere: Uccidere
+POWER_WORD_STUN=Parola del Potere: Stordire
 PRAYER_OF_HEALING=Preghiera di Guarigione
 PRESTIDIGITATION=Prestidigitazione
 PRISMATIC_SPRAY=Spruzzo Prismatico
