--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -79,6 +79,7 @@ SAVE_ALL_BEFORE_CLOSING=Save all changes before closing?
 CANCEL=Cancel
 CLOSE_MESSAGE=Save changes?
 ADD_ITEM=Add Item
+NOTES=Notes
 
 # ------------------------------
 # Attributes
