--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -79,6 +79,7 @@ SAVE_ALL_BEFORE_CLOSING=Vuoi salvare tutte le modifiche prima di chiudere?
 CANCEL=Annulla
 CLOSE_MESSAGE=Salvare le modifiche?
 ADD_ITEM=Aggiungi Oggetto
+NOTES=Appunti
 
 # ------------------------------
 # Attributes
