--- a/src/main/resources/miscs_it.properties
+++ b/src/main/resources/miscs_it.properties
@@ -105,7 +105,7 @@ CHARGE_ATTACK=se ti muovi di almeno 3 metri in linea retta verso un bersaglio ap
 IMPROVED_DASH=quando usi l’azione Scatto, la tua Velocità aumenta di ulteriori 3 metri.
 REPLENISHING_MEAL=come parte di un Riposo Breve, puoi cucinare del cibo speciale se hai a portata di mano ingredienti e Utensili da Cuoco. Puoi preparare cibo a sufficienza per un numero di creature pari a 4 più il tuo Bonus di Competenza. Al termine del Riposo Breve, ogni creatura che mangi il cibo e spenda uno o più Dadi Vita per recuperare Punti Ferita, recupera ulteriori 1d8 Punti Ferita.
 BOLSTERING_TREATS=con un’ora di lavoro o quando termini un Riposo Lungo, puoi cucinare un numero di bocconcini pari al tuo Bonus di Competenza se hai a portata di mano ingredienti e Utensili da Cuoco. Tali bocconcini speciali durano 8 ore dopo essere stati fatti. Una creatura può usare un’Azione Bonus per mangiare uno di questi bocconcini e guadagnare un numero di Punti Ferita Temporanei pari al tuo Bonus di Competenza.
-COOKS_UTENSILS=sei competente negli Utensili da Cuoco se non la possiedi già.
+COOKS_UTENSILS=sei competente negli Utensili da Cuoco se non lo sei già.
 DUAL_WIELDING=quando esegui l’attacco extra della proprietà Leggero, puoi aggiungere il tuo modificatore di caratteristica al danno dell’attacco extra se tale attacco è fatto con una balestra Leggera e non stai già aggiungendo tale modificatore al danno.
 IGNORE_LOADING=puoi ignorare la proprietà di Riarica delle balestre. Se ne hai una in mano, puoi caricare una munizione anche se ti manca una mano libera.
 FIRING_IN_MELEE_CROSSBOWS=essere a meno di 1,5 metri di distanza da un nemico non impone Svantaggio ai tuoi tiri di attacco con armi A Distanza.
