--- a/src/main/resources/spellMaterials_it.properties
+++ b/src/main/resources/spellMaterials_it.properties
@@ -1,214 +1,172 @@
-AID=a strip of white cloth
-ALARM=a bell and silver wire
-ANIMAL_FRIENDSHIP=a morsel of food
-ANIMAL_MESSENGER=a morsel of food
-ANIMATE_DEAD=a drop of blood, a piece of flesh, and a pinch of bone dust
-ANTIMAGIC_FIELD=iron filings
-ANTIPATHY_SYMPATHY=a mix of vinegar and honey
-ARCANE_EYE=a bit of bat fur
-ARCANE_LOCK=gold dust worth 25+ GP, which the spell consumes
-ARMOR_OF_AGATHYS=a shard of blue glass
-ASTRAL_PROJECTION=for each of the spell's targets, one jacinth worth 1,000+ GP and one silver bar worth 100+ GP, all of which the spell consumes
-AUGURY=special marked sticks, bones, cards, or other divinatory tokens worth 25+ GP
-AWAKEN=an agate worth 1,000+ GP, which the spell consumes
-BANE=a drop of blood
-BANISHMENT=a pentacle
-BARKSKIN=a handful of bark
-BEFUDDLEMENT=a key ring with no keys
-BIGBY'S_HAND=an eggshell and a glove
-BLESS=a Holy Symbol, worth 5+ GP
-CHAIN_LIGHTNING=three silver pins
-CHROMATIC_ORB=a diamond worth 50+ GP
-CIRCLE_OF_DEATH=the powder of a crushed black pearl worth 500+ GP
-CLAIRVOYANCE=a focus worth 100+ GP, either a jeweled horn for hearing or a glass eye for seeing
-CLONE=a diamond worth 1,000+ GP, which the spell consumes, and a vessel worth 2,000+ GP that is large enough to hold the creature being cloned
-CLOUD_OF_DAGGERS=a sliver of glass
-COLOR_SPRAY=a pinch of colorful sand
-COMMUNE=incense
-COMPREHEND_LANGUAGES=a pinch of soot and salt
-CONE_OF_COLD=a small crystal or glass cone
-CONFUSION=three nut shells
-CONJURE_BARRAGE=a Melee or Ranged weapon worth at least 1 CP
-CONJURE_VOLLEY=a Melee or Ranged weapon worth at least 1 CP
-CONTINGENCY=a gem-incrusted statuette of yourself worth 1,500+ GP
-CONTINUAL_FLAME=ruby dust worth 50+ GP, which the spell consumes
-CONTROL_WATER=a mixture of water and dust
-CONTROL_WEATHER=burning incense
-CORDON_OF_ARROWS=an ornamental braid
-CREATE_OR_DESTROY_WATER=a mix of water and sand
-CREATE_UNDEAD=one 150+ GP black onyx stone for each corpse
-CREATION=a paintbrush
-DANCING_LIGHTS=a bit of phosphorus
-DARKNESS=bat fur and a piece of coal
-DARKVISION=a dried carrot
-DELAYED_BLAST_FIREBALL=a ball of bat guano and sulfur
-DETECT_POISON_AND_DISEASE=a yew leaf
-DETECT_THOUGHTS=a copper piece
-DISINTEGRATE=a lodestone and dust
-DISPEL_EVIL_AND_GOOD=powdered silver and iron
-DIVINATION=incense worth 25+ GP, which the spell consumes
-DRAGON'S_BREATH=a hot pepper
-DRAWMIJ'S_INSTANT_SUMMONS=a sapphire worth 1,000+ GP
-DREAM=a handful of sand
-EARTHQUAKE=a fractured rock
-ENHANCE_ABILITY=fur or a feather
-ENLARGE_REDUCE=a pinch of powdered iron
-EVARD'S_BLACK_TENTACLES=a tentacle
-FALSE_LIFE=a drop of alcohol
-FEAR=a white feather
-FEATHER_FALL=a small feather or piece of down
-FEIGN_DEATH=a pinch of graveyard dirt
-FIND_FAMILIAR=burning incense worth 10+ GP, which the spell consumes
-FIND_THE_PATH=a set of divination tools-such as cards or runes-worth 100+ GP
-FIRE_SHIELD=a bit of phosphorus or a firefly
-FIREBALL=a ball of bat guano and sulfur
-FLAME_BLADE=a sumac leaf
-FLAME_STRIKE=a pinch of sulfur
-FLAMING_SPHERE=a ball of wax
-FLESH_TO_STONE=a cockatrice feather
-FLY=a feather
-FORBIDDANCE=ruby dust worth 1,000+ GP
-FORCECAGE=ruby dust worth 1,500+ GP, which the spell consumes
-FORESIGHT=a hummingbird feather
-FREEDOM_OF_MOVEMENT=a leather strap
-FRIENDS=some makeup
-GASEOUS_FORM=a bit of gauze
-GATE=a diamond worth 5,000+ GP
-GENTLE_REPOSE=2 copper pieces, which the spell consumes
-GLOBE_OF_INVULNERABILITY=a glass bead
-GLYPH_OF_WARDING=powdered diamond worth 200+ GP, which the spell consumes
-GOODBERRY=a sprig of mistletoe
-GREASE=a bit of pork rind or butter
-GREATER_RESTORATION=diamond dust worth 100+ GP, which the spell consumes
-GUARDS_AND_WARDS=a silver rod worth 10+ GP
-GUST_OF_WIND=a legume seed
-HALLOW=incense worth 1,000+ GP, which the spell consumes
-HALLUCINATORY_TERRAIN=a mushroom
-HASTE=a shaving of licorice root
-HEAT_METAL=a piece of iron and a flame
-HEROES'_FEAST=a gem-encrusted bowl worth 1,000+ GP, which the spell consumes
-HEX=the petrified eye of a newt
-HOLD_MONSTER=a straight piece of iron
-HOLD_PERSON=a straight piece of iron
-HOLY_AURA=a reliquary worth 1,000+ GP
-HUNGER_OF_HADAR=a pickled tentacle
-HYPNOTIC_PATTERN=a pinch of confetti
-ICE_KNIFE=a drop of water or a piece of ice
-ICE_STORM=a mitten
-IDENTIFY=a pearl worth 100+ GP
-ILLUSORY_SCRIPT=ink worth 10+ GP, which the spell consumes
-IMPRISONMENT=a statuette of the target worth 5,000+ GP
-INSECT_PLAGUE=a locust
-INVISIBILITY=an eyelash in gum arabic
-JALLARZI'S_STORM_OF_RADIANCE=a pinch of phosphorus
-JUMP=a grasshopper's hind leg
-LEGEND_LORE=incense worth 250+ GP, which the spell consumes, and four ivory strips worth 50+ GP each
-LEOMUND'S_SECRET_CHEST=a chest, 3 feet by 2 feet by 2 feet, constructed from rare materials worth 5,000+ GP, and a Tiny replica of the chest made from the same materials worth 50+ GP
-LEOMUND'S_TINY_HUT=a crystal bead
-LEVITATE=a metal spring
-LIGHT_SPELL=a firefly or phosphorescent moss
-LIGHTNING_BOLT=a bit of fur and a crystal rod
-LOCATE_ANIMALS_OR_PLANTS=fur from a bloodhound
-LOCATE_CREATURE=fur from a bloodhound
-LOCATE_OBJECT=a forked twig
-LONGSTRIDER=a pinch of dirt
-MAGE_ARMOR=a piece of cured leather
-MAGIC_CIRCLE=salt and powdered silver worth 100+ GP, which the spell consumes
-MAGIC_JAR=a gem, crystal, or reliquary worth 500+ GP
-MAGIC_MOUTH=jade dust worth 10+ GP, which the spell consumes
-MAJOR_IMAGE=a bit of fleece
-MASS_SUGGESTION=a snake's tongue
-MELF'S_ACID_ARROW=powdered rhubarb leaf
-MENDING=two lodestones
-MESSAGE=a copper wire
-MINOR_ILLUSION=a bit of fleece
-MOONBEAM=a moonseed leaf
-MORDENKAINEN'S_FAITHFUL_HOUND=a silver whistle
-MORDENKAINEN'S_MAGNIFICENT_MANSION=a miniature door worth 15+ GP
-MORDENKAINEN'S_PRIVATE_SANCTUM=a thin sheet of lead
-MORDENKAINEN'S_SWORD=a miniature sword worth 250+ GP
-MOVE_EARTH=a miniature shovel
-NONDETECTION=a pinch of diamond dust worth 25+ GP, which the spell consumes
-NYSTUL'S_MAGIC_AURA=a small square of silk
-OTILUKE'S_FREEZING_SPHERE=a small crystal sphere
-OTILUKE'S_RESILIENT_SPHERE=a glass sphere
-PASS_WITHOUT_TRACE=ashes from a burned mistletoe
-PASSWALL=a pinch of sesame seeds
-PHANTASMAL_FORCE=a bit of fleece
-PLANAR_BINDING=a jewel worth 1,000+ GP, which the spell consumes
-PLANE_SHIFT=a forked, metal rod worth 250+ GP and attuned to a particular plane of existence
-POLYMORPH=a caterpillar cocoon
-PROGRAMMED_ILLUSION=jade dust worth 25+ GP
-PROJECT_IMAGE=a statuette of yourself worth 5+ GP
-PROTECTION_FROM_EVIL_AND_GOOD=a flask of Holy Water worth 25+ GP, which the spell consumes
-RAISE_DEAD=a diamond worth 500+ GP, which the spell consumes
-RARY'S_TELEPATHIC_BOND=two eggs
-REGENERATE=a prayer wheel
-REINCARNATE=rare oils worth 1,000+ GP, which the spell consumes
-RESURRECTION=a diamond worth 1,000+ GP, which the spell consumes
-REVERSE_GRAVITY=a lodestone and iron filings
-REVIVIFY=a diamond worth 300+ GP, which the spell consumes
-ROPE_TRICK=a segment of rope
-SANCTUARY=a shard of glass from a mirror
-SCRYING=a focus worth 1,000+ GP, such as a crystal ball, mirror, or water-filled font
-SEE_INVISIBILITY=a pinch of talc
-SENDING=a copper wire
-SEQUESTER=gem dust worth 5,000+ GP, which the spell consumes
-SHAPECHANGE=a jade circlet worth 1,500+ GP
-SHATTER=a chip of mica
-SHIELD_OF_FAITH=a prayer scroll
-SHILLELAGH=mistletoe
-SILENT_IMAGE=a bit of fleece
-SIMULACRUM=powdered ruby worth 1,500+ GP, which the spell consumes
-SLEEP=a pinch of sand or rose petals
-SLEET_STORM=a miniature umbrella
-SLOW=a drop of molasses
-SPEAK_WITH_DEAD=burning incense
-SPIDER_CLIMB=a drop of bitumen and a spider
-SPIKE_GROWTH=seven thorns
-SPIRIT_GUARDIANS=a prayer scroll
-STEEL_WIND_STRIKE=a Melee weapon worth 1+ SP
-STINKING_CLOUD=a rotten egg
-STONE_SHAPE=soft clay
-STONESKIN=diamond dust worth 100+ GP, which the spell consumes
-SUGGESTION=a drop of honey
-SUMMON_ABERRATION=a pickled tentacle and an eyeball in a platinum-inlaid vial worth 400+ GP
-SUMMON_BEAST=a feather, tuft of fur, and fish tail inside a gilded acorn worth 200+ GP
-SUMMON_CELESTIAL=a reliquary worth 500+ GP
-SUMMON_CONSTRUCT=a lockbox worth 400+ GP
-SUMMON_DRAGON=an object with the image of a dragon engraved on it worth 500+ GP
-SUMMON_ELEMENTAL=air, a pebble, ash, and water inside a gold-inlaid vial worth 400+ GP
-SUMMON_FEY=a gilded flower worth 300+ GP
-SUMMON_FIEND=a bloody vial worth 600+ GP
-SUMMON_UNDEAD=a gilded skull worth 300+ GP
-SUNBEAM=a magnifying glass
-SUNBURST=piece of sunstone
-SWIFT_QUIVER=a Quiver worth 1+ GP
-SYMBOL=powdered diamond worth 1,000+ GP, which the spell consumes
-TASHA'S_BUBBLING_CAULDRON=a gilded ladle worth 500+ GP
-TASHA'S_HIDEOUS_LAUGHTER=a tart and a feather
-TELEPATHY=a pair of linked silver rings
-TELEPORTATION_CIRCLE=rare inks worth 50+ GP, which the spell consumes
-TENSER'S_FLOATING_DISK=a drop of mercury
-THORN_WHIP=the stem of a thorny plant
-TONGUES=a miniature ziggurat
-TRUE_POLYMORPH=a drop of mercury, a dollop of gum arabic, and a wisp of smoke
-TRUE_RESURRECTION=diamonds worth 25,000+ GP, which the spell consumes
-TRUE_SEEING=mushroom powder worth 25+ GP, which the spell consumes
-TRUE_STRIKE=a weapon with which you have proficiency and that is worth 1+ CP
-UNSEEN_SERVANT=a bit of string and of wood
-VITRIOLIC_SPHERE=a drop of bile
-WALL_OF_FIRE=a piece of charcoal
-WALL_OF_FORCE=a sharp of glass
-WALL_OF_ICE=a piece of quartz
-WALL_OF_STONE=a cube of granite
-WALL_OF_THORNS=a handful of thorns
-WARDING_BOND=a pair of platinum rings worth 50+ GP each, which you and the target must wear for the duration
-WATER_BREATHING=a short reed
-WATER_WALK=a piece of cork
-WEB=a bit of spiderweb
-WIND_WALK=a candle
-WIND_WALL=a fan and a feather
-WITCH_BOLT=a twig struck by lightning
-WORD_OF_RADIANCE=a sunburst token
-YOLANDE'S_REGAL_PRESENCE=a miniature tiara
+SPELL_ACID_ARROW=powdered rhubarb leaf
+SPELL_AID=a strip of white cloth
+SPELL_ALARM=a bell and silver wire
+SPELL_ANIMAL_FRIENDSHIP=a morsel of food
+SPELL_ANIMAL_MESSENGER=a morsel of food
+SPELL_ANIMATE_DEAD=a drop of blood, a piece of flesh, and a pinch of bone dust
+SPELL_ANTIMAGIC_FIELD=iron filings
+SPELL_ARCANE_EYE=a bit of bat fur
+SPELL_ARCANE_HAND=an eggshell and a glove
+SPELL_ARCANE_LOCK=gold dust worth 25+ GP, which the spell consumes
+SPELL_ARCANE_SWORD=a miniature sword worth 250+ GP
+SPELL_ARCANIST’S_MAGIC_AURA=a small square of silk
+SPELL_ASTRAL_PROJECTION=for each of the spell’s targets, one jacinth worth 1,000+ GP and one silver bar worth 100+ GP, all of which the spell consumes
+SPELL_AUGURY=specially marked sticks, bones, cards, or other divinatory tokens worth 25+ GP
+SPELL_AWAKEN=an agate worth 1,000+ GP, which the spell consumes
+SPELL_BANE=a drop of blood
+SPELL_BANISHMENT=a pentacle
+SPELL_BEFUDDLEMENT=a key ring with no keys
+SPELL_BLACK_TENTACLES=a tentacle
+SPELL_BLESS=a Holy Symbol worth 5+ GP
+SPELL_CHAIN_LIGHTNING=three silver pins
+SPELL_CHROMATIC_ORB=a diamond worth 50+ GP
+SPELL_CIRCLE_OF_DEATH=the powder of a crushed black pearl worth 500+ GP
+SPELL_CLAIRVOYANCE=a focus worth 100+ GP, either a jeweled horn for hearing or a glass eye for seeing
+SPELL_COLOR_SPRAY=a pinch of colorful sand
+SPELL_COMMUNE=incense
+SPELL_COMPREHEND_LANGUAGES=a pinch of soot and salt
+SPELL_CONE_OF_COLD=a small crystal or glass cone
+SPELL_CONFUSION=three nut shells
+SPELL_CONTINGENCY=a gem-encrusted statuette of yourself worth 1,500+ GP
+SPELL_CONTINUAL_FLAME=ruby dust worth 50+ GP, which the spell consumes
+SPELL_CREATE_OR_DESTROY_WATER=a mix of water and sand
+SPELL_CREATE_UNDEAD=one 150+ GP black onyx stone for each corpse
+SPELL_CREATION=a paintbrush
+SPELL_DARKNESS=bat fur and a piece of coal
+SPELL_DARKVISION=a dried carrot
+SPELL_DELAYED_BLAST_FIREBALL=a ball of bat guano and sulfur
+SPELL_DETECT_POISON_AND_DISEASE=a yew leaf
+SPELL_DETECT_THOUGHTS=1 Copper Piece
+SPELL_DISINTEGRATE=a lodestone and dust
+SPELL_DISPEL_EVIL_AND_GOOD=powdered silver and iron
+SPELL_DIVINATION=incense worth 25+ GP, which the spell consumes
+SPELL_DRAGON’S_BREATH=a hot pepper
+SPELL_DREAM=a handful of sand
+SPELL_EARTHQUAKE=a fractured rock
+SPELL_ENHANCE_ABILITY=fur or a feather
+SPELL_ENLARGE/REDUCE=a pinch of powdered iron
+SPELL_FAITHFUL_HOUND=a silver whistle
+SPELL_FALSE_LIFE=a drop of alcohol
+SPELL_FEAR=a white feather
+SPELL_FEATHER_FALL=a small feather or piece of down
+SPELL_FIND_FAMILIAR=burning incense worth 10+ GP, which the spell consumes
+SPELL_FIND_THE_PATH=a set of divination tools—such as cards or runes—worth 100+ GP
+SPELL_FIREBALL=a ball of bat guano and sulfur
+SPELL_FIRE_SHIELD=a bit of phosphorus or a firefly
+SPELL_FLAME_BLADE=a sumac leaf
+SPELL_FLAME_STRIKE=a pinch of sulfur
+SPELL_FLAMING_SPHERE=a ball of wax
+SPELL_FLESH_TO_STONE=a cockatrice feather
+SPELL_FLOATING_DISK=a drop of mercury
+SPELL_FLY=a feather
+SPELL_FORBIDDANCE=ruby dust worth 1,000+ GP
+SPELL_FORCECAGE=ruby dust worth 1,500+ GP, which the spell consumes
+SPELL_FORESIGHT=a hummingbird feather
+SPELL_FREEDOM_OF_MOVEMENT=a leather strap
+SPELL_FREEZING_SPHERE=a miniature crystal sphere
+SPELL_GASEOUS_FORM=a bit of gauze
+SPELL_GATE=a diamond worth 5,000+ GP
+SPELL_GENTLE_REPOSE=2 Copper Pieces, which the spell consumes
+SPELL_GLOBE_OF_INVULNERABILITY=a glass bead
+SPELL_GLYPH_OF_WARDING=powdered diamond worth 200+ GP, which the spell consumes
+SPELL_GOODBERRY=a sprig of mistletoe
+SPELL_GREASE=a bit of pork rind or butter
+SPELL_GUARDS_AND_WARDS=a silver rod worth 10+ GP
+SPELL_GUST_OF_WIND=a legume seed
+SPELL_HALLOW=incense worth 1,000+ GP, which the spell consumes
+SPELL_HALLUCINATORY_TERRAIN=a mushroom
+SPELL_HASTE=a shaving of licorice root
+SPELL_HEAT_METAL=a piece of iron and a flame
+SPELL_HEROES’_FEAST=a gem-encrusted bowl worth 1,000+ GP, which the spell consumes
+SPELL_HEX=the petrified eye of a newt
+SPELL_HIDEOUS_LAUGHTER=a tart and a feather
+SPELL_HOLD_MONSTER=a straight piece of iron
+SPELL_HOLY_AURA=a reliquary worth 1,000+ GP
+SPELL_HYPNOTIC_PATTERN=a pinch of confetti
+SPELL_ICE_KNIFE=a drop of water or a piece of ice
+SPELL_ICE_STORM=a mitten
+SPELL_IDENTIFY=a pearl worth 100+ GP
+SPELL_ILLUSORY_SCRIPT=ink worth 10+ GP, which the spell consumes
+SPELL_INSECT_PLAGUE=a locust
+SPELL_INSTANT_SUMMONS=a sapphire worth 1,000+ GP
+SPELL_INVISIBILITY=an eyelash in gum arabic
+SPELL_LEGEND_LORE=incense worth 250+ GP, which the spell consumes, and four ivory strips worth 50+ GP each
+SPELL_LEVITATE=a metal spring
+SPELL_LIGHTNING_BOLT=a bit of fur and a crystal rod
+SPELL_LOCATE_ANIMALS_OR_PLANTS=fur from a bloodhound
+SPELL_LOCATE_CREATURE=fur from a bloodhound
+SPELL_LOCATE_OBJECT=a forked twig
+SPELL_LONGSTRIDER=a pinch of dirt
+SPELL_MAGE_ARMOR=a piece of cured leather
+SPELL_MAGIC_CIRCLE=salt and powdered silver worth 100+ GP, which the spell consumes
+SPELL_MAGIC_JAR=a gem, crystal, or reliquary worth 500+ GP
+SPELL_MAGIC_MOUTH=jade dust worth 10+ GP, which the spell consumes
+SPELL_MAGNIFICENT_MANSION=a miniature door worth 15+ GP
+SPELL_MAJOR_IMAGE=a bit of fleece
+SPELL_MASS_SUGGESTION=a snake’s tongue
+SPELL_MOONBEAM=a moonseed leaf
+SPELL_MOVE_EARTH=a miniature shovel
+SPELL_NONDETECTION=a pinch of diamond dust worth 25+ GP, which the spell consumes
+SPELL_PASSWALL=a pinch of sesame seeds
+SPELL_PASS_WITHOUT_TRACE=ashes from burned mistletoe
+SPELL_PHANTASMAL_FORCE=a bit of fleece
+SPELL_PLANAR_BINDING=a jewel worth 1,000+ GP, which the spell consumes
+SPELL_PLANE_SHIFT=a forked, metal rod worth 250+ GP and attuned to a plane of existence
+SPELL_POLYMORPH=a caterpillar cocoon
+SPELL_PRIVATE_SANCTUM=a thin sheet of lead
+SPELL_PROGRAMMED_ILLUSION=jade dust worth 25+ GP
+SPELL_PROJECT_IMAGE=a statuette of yourself worth 5+ GP
+SPELL_PROTECTION_FROM_EVIL_AND_GOOD=a flask of Holy Water worth 25+ GP, which the spell consumes
+SPELL_RAISE_DEAD=a diamond worth 500+ GP, which the spell consumes
+SPELL_REGENERATE=a prayer wheel
+SPELL_RESILIENT_SPHERE=a glass sphere
+SPELL_RESURRECTION=a diamond worth 1,000+ GP, which the spell consumes
+SPELL_REVERSE_GRAVITY=a lodestone and iron filings
+SPELL_REVIVIFY=a diamond worth 300+ GP, which the spell consumes
+SPELL_ROPE_TRICK=a segment of rope
+SPELL_SANCTUARY=a shard of glass from a mirror
+SPELL_SCRYING=a focus worth 1,000+ GP, such as a crystal ball, mirror, or water-filled font
+SPELL_SECRET_CHEST=a chest, 3 feet by 2 feet by 2 feet, constructed from rare materials worth 5,000+ GP, and a Tiny replica of the chest made from the same materials worth 50+ GP
+SPELL_SEE_INVISIBILITY=a pinch of talc
+SPELL_SENDING=a copper wire
+SPELL_SEQUESTER=gem dust worth 5,000+ GP, which the spell consumes
+SPELL_SHAPECHANGE=a jade circlet worth 1,500+ GP
+SPELL_SHATTER=a chip of mica
+SPELL_SHIELD_OF_FAITH=a prayer scroll
+SPELL_SILENT_IMAGE=a bit of fleece
+SPELL_SIMULACRUM=powdered ruby worth 1,500+ GP, which the spell consumes
+SPELL_SLEEP=a pinch of sand or rose petals
+SPELL_SLEET_STORM=a miniature umbrella
+SPELL_SLOW=a drop of molasses
+SPELL_SPEAK_WITH_DEAD=burning incense
+SPELL_SPIDER_CLIMB=a drop of bitumen and a spider
+SPELL_SPIKE_GROWTH=seven thorns
+SPELL_SPIRIT_GUARDIANS=a prayer scroll
+SPELL_STINKING_CLOUD=a rotten egg
+SPELL_STONE_SHAPE=soft clay
+SPELL_STONESKIN=diamond dust worth 100+ GP, which the spell consumes
+SPELL_SUGGESTION=a drop of honey
+SPELL_SUMMON_DRAGON=an object with the image of a dragon engraved on it worth 500+ GP
+SPELL_SUNBEAM=a magnifying glass
+SPELL_SUNBURST=a piece of sunstone
+SPELL_SYMBOL=powdered diamond worth 1,000+ GP, which the spell consumes
+SPELL_TELEPATHIC_BOND=two eggs
+SPELL_TELEPORTATION_CIRCLE=rare inks worth 50+ GP, which the spell consumes
+SPELL_TINY_HUT=a crystal bead
+SPELL_TONGUES=a miniature ziggurat
+SPELL_TRUE_POLYMORPH=a drop of mercury, a dollop of gum arabic, and a wisp of smoke
+SPELL_TRUE_RESURRECTION=diamonds worth 25,000+ GP, which the spell consumes
+SPELL_TRUE_SEEING=mushroom powder worth 25+ GP, which the spell consumes
+SPELL_UNSEEN_SERVANT=a bit of string and of wood
+SPELL_VITRIOLIC_SPHERE=a drop of bile
+SPELL_WALL_OF_FIRE=a piece of charcoal
+SPELL_WALL_OF_FORCE=a shard of glass
+SPELL_WALL_OF_ICE=a piece of quartz
+SPELL_WALL_OF_STONE=a cube of granite
+SPELL_WALL_OF_THORNS=a handful of thorns
+SPELL_WARDING_BOND=a pair of platinum rings worth 50+ GP each, which you and the target must wear for the duration
+SPELL_WATER_BREATHING=a short reed
+SPELL_WATER_WALK=a piece of cork
+SPELL_WEB=a bit of spiderweb
+SPELL_WIND_WALK=a candle
+SPELL_WIND_WALL=a fan and a feather
